[tool.poetry]
name = "feed-kmn"
version = "0.1.0"
description = ""
authors = ["noreyb <disce_uno@yahoo.co.jp>"]
readme = "README.md"
packages = [{include = "feed_kmn"}]

[tool.poetry.dependencies]
python = "^3.11"
pyyaml = "^6.0"
requests = "^2.31.0"
python-dotenv = "^1.0.0"
pykakasi = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
